<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_openwifisettings"
        android:icon="@drawable/ic_settings_input_antenna"
        android:orderInCategory="1"
        android:title="@string/wifi_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        android:title="@string/settings_activity_title"
        app:showAsAction="ifRoom" />
</menu>