<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="pref_verify_md5_hash_of_copied_files"
        app:defaultValue="true"
        app:title="@string/settings_verify_md5_hash"
        app:summary="@string/settings_verify_md5_hash_summary"/>

    <EditTextPreference
        app:key="pref_target_directory_name"
        app:title="@string/settings_target_directory_name"
        app:defaultValue="photo_copy_images"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>
